# toolforge4py

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/: __init__.py  arguments.py  manifest.py
tests/: test_arguments.py  test_io.py  test_manifest.py
tests/spreadsheets/: legacy.xls  multisheet.xlsx  ooxml.xlsx  with-bom.csv  without-bom-utf-8.csv
toolforgeio/: __init__.py  arguments.py  io.py  manifest.py
